CE-221 oap-ws: error messages
