# oap-ws/oap-ws/src/main/java/oap/ws/ErrorResponse401Builder.java
@@ -1,0 +1,33 @@
+package oap.ws;
+
+import static oap.http.Http.ContentType.APPLICATION_JSON;
+import static oap.http.Http.Headers.WWW_AUTHENTICATE;
+import static oap.http.Http.StatusCode.UNAUTHORIZED;
+
+public class ErrorResponse401Builder {
+    private final ErrorResponseBuilder builder = new ErrorResponseBuilder()
+        .statusCode( UNAUTHORIZED )
+        .error( "Unauthorized" );
+
+    public ErrorResponse401Builder error( String error ) {
+        builder.error( error );
+        return this;
+    }
+
+    public ErrorResponse401Builder message( String message ) {
+        builder.message( message );
+        return this;
+    }
+
+    public ErrorResponse401Builder message( int code, String message ) {
+        builder.message( code, message );
+        return this;
+    }
+
+    public Response build() {
+        return new Response( UNAUTHORIZED )
+            .withContentType( APPLICATION_JSON )
+            .withHeader( WWW_AUTHENTICATE, "Bearer" )
+            .withBody( builder.build() );
+    }
+}
